flex/04-flex-information/style.css
html, body {
  height: 100%;
  margin: 0;
}

body {
  font-family: 'Courier New', Courier, monospace;
  text-align: center;
  display: flex;
  flex-direction: column;
  height: 100vh;
}

img {
  width: 100px;
  height: 100px;
}

.container {
  display: flex;
  justify-content: center;
  gap: 52px;
  flex-wrap: wrap;
  flex: 1;
}

.info {
  max-width: 200px;
}

.title {
  font-size: 36px;
  font-weight: 900;
  margin-bottom: 32px;
}

/* do not edit this footer */
.footer {
  /*
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  */
  margin-top: 32px;
  padding: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #eee;
}

